--- a/win/VC120/ScriptDev2.vcxproj.filters
+++ b/win/VC120/ScriptDev2.vcxproj.filters
@@ -1702,6 +1702,9 @@
     <ClCompile Include="..\..\src\myscript\mercenary_bot.cpp">
       <Filter>scripts\custom</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\myscript\gmtools.cpp">
+      <Filter>scripts\custom</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\scriptdev2\base\escort_ai.h">
@@ -1973,6 +1976,9 @@
       <Filter>scripts\custom</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\myscript\mercenary_bot.h">
+      <Filter>scripts\custom</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\myscript\gmtools.h">
       <Filter>scripts\custom</Filter>
     </ClInclude>
   </ItemGroup>
