--- a/win/VC120/game.vcxproj.filters
+++ b/win/VC120/game.vcxproj.filters
@@ -577,6 +577,12 @@
     <ClCompile Include="..\..\src\game\MercenaryPet.cpp">
       <Filter>Mercenary</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\game\pr_spell_plugin.cpp">
+      <Filter>PR</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\game\pr_quest_plugin.cpp">
+      <Filter>PR</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\game\AccountMgr.h">
@@ -1095,6 +1101,12 @@
     </ClInclude>
     <ClInclude Include="..\..\src\game\MercenaryPet.h">
       <Filter>Mercenary</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\pr_spell_plugin.h">
+      <Filter>PR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\pr_quest_plugin.h">
+      <Filter>PR</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
